chore: fix deprecated code